--- a/css/buckyless/beta-header.less
+++ b/css/buckyless/beta-header.less
@@ -10,7 +10,7 @@
  	width : 100%;
  	background-image: url('common/images/grey-jean.png');
  	background-color: #f7f5e8;
- 	
+
  }
 
  .beta-announcement .text {
@@ -36,6 +36,9 @@
 @media (max-width: 768px) {
   #beta-buttons {
   	padding-right : 0 !important;
+    span a {
+      font-size : x-small;
+    }
   }
 }
 
